# gkmeans

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  README.md
data/: example.ini
data/test_data/: data_provider_test.h5
examples/imagenet/: imagenet_100k.ini
examples/kmeans/: example.ini  example_seed.h5  run_kmeans.sh
include/gkmeans/: common.h  comp_functions.h  controllers.h  data_providers.h  functions.h  mat.h  mem.h  test_all.h
include/gkmeans/utils/: cuda_utils.h  distance_metrics.h  io.h  math_ops.h
src/gkmeans/: common.cpp  controllers.cpp  mat.cpp  mem.cpp
src/gkmeans/data_providers/: base_data_provider.cpp  h5df_data_provider.cpp
src/gkmeans/functions/: center_of_mass_func.cpp  data_provider_func.cpp  nearest_neight_func.cpp
src/gkmeans/utils/: distance_metrics.cpp  io.cpp  math_ops.cpp  math_ops.cu
src/tests/: comp_func_test.cpp  controller_test.cpp  data_provider_test.cpp  data_test.cpp  distance_test.cpp  test_all.cpp
tools/: gkmeans.cpp
